# matagent

./: .gitattributes  .gitignore  README.md  setup.cfg
agent4crys/component/: __init__.py
agent4crys/component/contriever/pretrain/: best_model.pth  mp20.yml  util.py
agent4crys/component/contriever/util/: data.py  loss.py  model.py
agent4crys/component/evaluator/: __init__.py  evaluator.py
agent4crys/component/knowledge_base/: __init__.py
agent4crys/component/knowledge_base/database/: __init__.py  (+3 more)
agent4crys/component/memory/: __init__.py  memory.py
agent4crys/component/proposer/: __init__.py  gpt.py  planner.py  proposer.py
agent4crys/diffusion/data/: __init__.py  dataloader.py  dataset.py  util.py
agent4crys/diffusion/embedding/: __init__.py  dist.py  time.py
agent4crys/diffusion/model/: __init__.py  model.py  util.py
agent4crys/diffusion/pretrain/: __init__.py  util.py
agent4crys/diffusion/scheduler/: __init__.py  base.py  beta.py  sigma.py
agent4crys/diffusion/transition/: __init__.py  categorical.py  continuous.py  wrapped_normal.py
agent4crys/diffusion/util/: eval.py  loss.py
agent4crys/evaluation/pretrain/: __init__.py  util.py
agent4crys/scripts/: inference.py
agent4crys/util/: __init__.py  periodic_table.py  prompt.py  seed.py
agent4crys/util/eval/: composition.py
agent4crys/util/train/: __init__.py  loss.py  optimizer.py  scheduler.py
data/mp_20/: README.md
data/mp_60/: README.md
works/test/: gen_mat_init00_iter00.csv  gen_mat_init00_iter01.csv  gen_mat_init00_iter02.csv  gen_mat_init00_iter03.csv  response_log_00.txt
(+21 files in other folders)
