[metadata]
name = agent4crys
version = attr: agent4crys.__version__

[options]
install_requires =
    torch
    torch_geometric
    torch_scatter
    torch_sparse
    transformers
    easydict
    wandb
    pymatgen
    jarvis-tools
    pydantic-settings
    openai
    pandarallel
    smact
    faiss-cpu
packages = agent4crys

[options.entry_points]
console_scripts = 
    matagent-inference = agent4crys.scripts.inference:main