[metadata]
name = agent4crys
version = attr: agent4crys.__version__

[options]
install_requires =
    torch==2.5.1
    torch_geometric
    torch_scatter
    torch_sparse
    transformers
    sentencepiece
    easydict
    wandb
    pymatgen
    e3nn
    jarvis-tools
    pydantic-settings
    openai
    pandarallel
    smact
    CBFV
    p-tqdm
    faiss-cpu
packages = agent4crys

[options.entry_points]
console_scripts = 
    matagent-inference = agent4crys.scripts.inference:main